--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -132,7 +132,7 @@
             <div class="flex flex-col items-center justify-center px-2 md:px-4 imagen-izq">
               <div class="w-14 h-14 md:w-16 md:h-16 lg:w-20 lg:h-20 transform transition-transform duration-300 hover:scale-110">
                 <img
-                    src="/imagenes/copas.png"
+                    src="/imagenes/tostado.png"
                     alt="Icono de Brindis"
                     class="w-full h-full object-contain icono-dorado"
                 />
@@ -154,7 +154,7 @@
 
           <div class="evento-item grid grid-cols-2 gap-4 md:gap-8 py-1 opacity-0">
             <div class="flex flex-col items-center justify-center px-2 md:px-4 text-center texto-izq">
-              <p class="font-serif text-lg md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Velas y apertura</p>
+              <p class="font-serif text-lg md:text-base lg:text-lg text-[#C9A961] font-bold leading-tight">Vals y apertura</p>
               <p class="font-serif text-base md:text-sm text-[#626a54] mt-0.5">21:30</p>
             </div>
             <div class="flex flex-col items-center justify-center px-2 md:px-4 imagen-der">
@@ -180,7 +180,7 @@
             <div class="flex flex-col items-center justify-center px-2 md:px-4 imagen-izq">
               <div class="w-14 h-14 md:w-16 md:h-16 lg:w-20 lg:h-20 transform transition-transform duration-300 hover:scale-110">
                 <img
-                    src="/imagenes/ramo.png"
+                    src="/imagenes/ramo-de-flores.png"
                     alt="Icono de Bouquet"
                     class="w-full h-full object-contain icono-dorado"
                 />
