--- a/src/components/DireccionIglesia.astro
+++ b/src/components/DireccionIglesia.astro
@@ -9,7 +9,7 @@
       
       <div class="mb-2" id="titulo-salon">
       <h2
-        class="font-charm text-2xl md:text-3xl text-[#C9A961] font-bold tracking-wide"
+        class="font-charm text-xl md:text-3xl text-[#C9A961] font-bold tracking-wide"
       >
         RECEPCIÓN SOCIAL
       </h2>
@@ -29,7 +29,7 @@
     <!-- TÍTULO DIRECCIÓN -->
     <div class="mb-2" id="titulo-salon">
       <h2
-        class="font-charm text-2xl md:text-3xl text-[#C9A961] font-bold tracking-wide"
+        class="font-charm text-xl md:text-3xl text-[#C9A961] font-bold tracking-wide"
       >
         Salón de Eventos Vip Madison
       </h2>
