--- a/src/components/Itinerario.astro
+++ b/src/components/Itinerario.astro
@@ -8,7 +8,7 @@
     <div class="max-w-3xl mx-auto relative">
 
       <div class="text-center mb-6 titulo-itinerario opacity-0">
-        <h2 class="font-serif text-2xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold mb-3">
+        <h2 class="font-serif text-xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold mb-3">
           ITINERARIO
         </h2>
         <div class="flex items-center justify-center gap-3">
