--- a/src/components/Nombres.astro
+++ b/src/components/Nombres.astro
@@ -52,8 +52,8 @@
           Padrinos de Iglesia
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Wili Estrada</p>
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Alba Torrez</p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]"> Wilfredo Estrada Torrez</p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Alba Elizeth Torrez Aguiar</p>
         </div>
       </div>
 
@@ -65,7 +65,7 @@
         </h2>
         <div class="space-y-1">
           <p class="font-charm text-lg sm:text-xl text-[#626a54]">Rodrigo Zenteno</p>
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Daniela Laguna</p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Daniela Laguna Rodríguez</p>
         </div>
       </div>
 
