--- a/src/components/Qr.astro
+++ b/src/components/Qr.astro
@@ -31,7 +31,7 @@
 
       <!-- TÍTULO -->
       <div class="text-center mb-8" id="titulo-qr">
-        <h2 class="font-charm text-2xl md:text-3xl lg:text-4xl text-[#C9A961] font-bold mb-4">
+        <h2 class="font-charm text-xl md:text-3xl lg:text-4xl text-[#C9A961] font-bold mb-4">
           MESA DE REGALOS
         </h2>
         <!-- Línea decorativa -->
@@ -45,7 +45,7 @@
       <!-- MENSAJE PRINCIPAL -->
       <div class="max-w-2xl mx-auto mb-8" id="mensaje-qr">
         <p class="font-charm text-xl md:text-2xl lg:text-2xl text-[#626a54] text-center leading-relaxed">
-          Su presencia en nuestra boda será el mejor regalo. Pero si desean darnos otro obsequio y si está en sus posibilidades, para su comodidad les agradeceremos su depósito en nuestra cuenta bancaria.
+          Su presencia en nuestra boda será el mejor regalo pero si quieren hacernos llegar un obsequio estaremos muy agradecidos de recibirlo. En caso de tener dudas respecto al obsequio, podrían hacernos un depósito en el siguiente Qr o en efectivo en sobres que estarán disponibles en el local de eventos.
         </p>
       </div>
 
