--- a/src/components/CodigoVestimenta.astro
+++ b/src/components/CodigoVestimenta.astro
@@ -19,7 +19,7 @@
     <!-- TÍTULO CÓDIGO DE VESTIMENTA -->
     <div class="mb-6" id="titulo-vestimenta">
       <h2
-        class="font-charm text-2xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold tracking-wide mb-4"
+        class="font-charm text-xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold tracking-wide mb-4"
       >
         CÓDIGO DE VESTIMENTA
       </h2>
