--- a/src/components/Despedida copy.astro
+++ b/src/components/Despedida copy.astro
@@ -43,8 +43,9 @@
         <div class="relative z-10">
           <!-- TÍTULO -->
           <div id="titulo-despedida" class="mb-8">
-            <h2 class="font-charm text-3xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold mb-4">
-              Querida Familia y Amigos
+            <h2 class="font-charm text-2xl md:text-3xl lg:text-3xl text-[#C9A961] font-bold mb-4">
+              <!-- Querida Familia y Amigos -->
+              QUERIDA FAMILIA Y AMIGOS
             </h2>
             <div class="flex items-center justify-center gap-3">
               <div class="w-16 h-[2px] bg-gradient-to-r from-transparent to-[#C9A961]"></div>
@@ -95,7 +96,7 @@
                 rel="noopener noreferrer"
               >
                 <img
-                  src="/imagenes/ConfirmarAsistencia.webp"
+                  src="/imagenes/Confirmar2.png"
                   alt="Confirmar asistencia por WhatsApp"
                   class="w-64 md:w-72 lg:w-72 h-auto object-contain cursor-pointer transition-transform duration-300 hover:scale-105 hover:brightness-110"
                 />
