--- a/src/components/NombresFlores.astro
+++ b/src/components/NombresFlores.astro
@@ -98,7 +98,7 @@
 
                         <!-- 👰 Nombre de la novia -->
                         <h2
-                            class="font-great-vibes text-6xl sm:text-7xl md:text-8xl lg:text-9xl text-[#6B6B6B] tracking-wide mt-2"
+                            class="font-great-vibes text-6xl sm:text-7xl md:text-8xl lg:text-9xl text-[#626a54] tracking-wide mt-2"
                             id="nombre-novia"
                         ></h2>
                     </div>
