--- a/src/components/Direccion.astro
+++ b/src/components/Direccion.astro
@@ -19,7 +19,7 @@
          <!-- TÍTULO DIRECCIÓN -->
     <div class="mb-2" id="titulo-direccion">
       <h2
-        class="font-charm text-xxl md:text-3xl text-[#C9A961] font-bold tracking-wide"
+        class="font-charm text-xl md:text-3xl text-[#C9A961] font-bold tracking-wide"
       >
         CEREMONIA RELIGIOSA
       </h2>
