--- a/src/components/Nombres.astro
+++ b/src/components/Nombres.astro
@@ -30,8 +30,8 @@
           Padres del Novio
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Sandro Rodríguez</p>
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Anahí Emilce Torrez (+) </p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Sandro Rodríguez Gareca </p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Anahí Emilce Torrez Segovia (+) </p>
         </div>
       </div>
 
@@ -52,7 +52,7 @@
           Padrinos de Iglesia
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]"> Wilfredo Estrada Torrez</p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]"> Wilfredo Estrada Torres</p>
           <p class="font-charm text-lg sm:text-xl text-[#626a54]">Alba Elizeth Torrez Aguiar</p>
         </div>
       </div>
@@ -64,7 +64,7 @@
           Madrinas de Civil
         </h2>
         <div class="space-y-1">
-          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Rodrigo Zenteno</p>
+          <p class="font-charm text-lg sm:text-xl text-[#626a54]">Rodrigo Zenteno Burgos</p>
           <p class="font-charm text-lg sm:text-xl text-[#626a54]">Daniela Laguna Rodríguez</p>
         </div>
       </div>
