--- a/src/components/Direccion.astro
+++ b/src/components/Direccion.astro
@@ -65,7 +65,7 @@
        Calle La Madrid y Campero
       </p>
       <div class="mt-4">
-<b class=" font-charm text-[#626a54] text-xl">16:00 HRS.</b>
+<b class=" font-charm text-[#626a54] text-xl">17:30 hrs.</b>
       </div>
     </div>
     
