--- a/src/components/DireccionIglesia.astro
+++ b/src/components/DireccionIglesia.astro
@@ -45,7 +45,7 @@
         Av. Héroes de la Tablada Nro 0978
       </p>
       <div class="mt-4">
-<b class=" font-charm text-[#626a54] text-xl">19:00 HRS.</b>
+<b class=" font-charm text-[#626a54] text-xl">19:00 hrs.</b>
       </div>
     </div>
     
